--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "nodemon --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettify": "prettier --write *.js **/*.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon ./src/app.js"
   },
   "author": "",
   "license": "ISC",
