--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "node_basic_project",
+  "name": "node_team_project",
   "version": "1.0.0",
-  "description": "항해99 Node.js 숙련 주차 프로젝트입니다.",
+  "description": "항해99 NODE.JS 심화주차 팀 프로젝트입니다.",
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon --watch server.js",
-    "test": "jest --detectOpenHandles --forceExit",
+    "test": "set jest --detectOpenHandles --forceExit",
+    "test_db:create": "cross-env NODE_ENV=test npx sequelize db:create",
+    "test_db:migrate": "cross-env NODE_ENV=test npx sequelize db:migrate",
     "prettify": "prettier --write *.js **/*.js",
     "dev": "nodemon ./src/server.js"
   },
@@ -15,6 +17,7 @@
     "body-parser": "^1.20.1",
     "cli": "^1.0.1",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "eslint": "^7.32.0",
     "express": "^4.18.2",
@@ -34,5 +37,8 @@
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.3"
   },
-  "keywords": []
+  "keywords": [],
+  "optionalDependencies": {
+    "win-node-env": "^0.6.1"
+  }
 }
